@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-<import-steps>
- <import-step id="action-icons" version="20051015-01"
-              handler="Products.CMFActionIcons.exportimport.importActionIconsTool"
-              title="Action Icons">
-  <dependency step="toolset"/>
-  Import action icon definitions
- </import-step>
-</import-steps>
