@@ -1,0 +1,14 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    i18n_domain="cmf_default">
+
+  <genericsetup:importStep
+      name="various"
+      title="Various Settings"
+      description="Import various settings from PortalGenerator."
+      handler="Products.CMFDefault.setuphandlers.importVarious">
+    <depends name="toolset"/>
+  </genericsetup:importStep>
+
+</configure>
