@@ -1,70 +1,0 @@
-<?xml version="1.0"?>
-<import-steps>
- <import-step id="actions" version="20040630-01"
-              handler="Products.CMFCore.exportimport.actions.importActionProviders"
-              title="Action Providers">
-  <dependency step="componentregistry"/>
-  Import actions tool's action providers and their actions.
- </import-step>
- <import-step id="caching_policy_mgr" version="20051011-01"
-              handler="Products.CMFCore.exportimport.cachingpolicymgr.importCachingPolicyManager"
-              title="Caching Policies">
-  <dependency step="toolset"/>
-  Import caching policy manager's policies.
- </import-step>
- <import-step id="catalog" version="20050929-01"
-              handler="Products.CMFCore.exportimport.catalog.importCatalogTool"
-              title="Catalog Tool">
-  <dependency step="toolset"/>
-  Import catalog tool's sub-objects, indexes and columns.
- </import-step>
- <import-step id="content_type_registry"
-              version="20051013-01"
-              handler="Products.CMFCore.exportimport.contenttyperegistry.importContentTypeRegistry"
-              title="Content Type Registry">
-  <dependency step="componentregistry"/>
-  Import content type registry's predicates and bindings.
- </import-step>
- <import-step id="cookie_authentication"
-              version="20050903-01"
-              handler="Products.CMFCore.exportimport.cookieauth.importCookieCrumbler"
-              title="Cookie Authentication">
-  <dependency step="toolset"/>
-  Import cookie crumbler settings
- </import-step>
- <import-step id="mailhost" version="20050803-01"
-              handler="Products.CMFCore.exportimport.mailhost.importMailHost"
-              title="MailHost">
-  <dependency step="componentregistry"/>
-  Import mailhost settings
- </import-step>
- <import-step id="properties" version="20041215-01"
-              handler="Products.CMFCore.exportimport.properties.importSiteProperties"
-              title="Site Properties">
-  Import site properties.
- </import-step>
- <import-step id="skins" version="20040630-01"
-              handler="Products.CMFCore.exportimport.skins.importSkinsTool"
-              title="Skins Tool">
-  <dependency step="componentregistry"/>
-  Import skins tool's filesystem directory views and skin path definitions.
- </import-step>
- <import-step id="typeinfo" version="20040630-01"
-              handler="Products.CMFCore.exportimport.typeinfo.importTypesTool"
-              title="Types Tool">
-  <dependency step="toolset"/>
-  Import types tool's type information objects.
- </import-step>
- <import-step id="various" version="20041118-01"
-              handler="Products.CMFDefault.setuphandlers.importVarious"
-              title="Various Settings">
-  <dependency step="toolset"/>
-  Import various settings from PortalGenerator.
- </import-step>
- <import-step id="workflow" version="20040630-01"
-              handler="Products.CMFCore.exportimport.workflow.importWorkflowTool"
-              title="Workflow Tool">
-  <dependency step="toolset"/>
-  Import workflow tool's workflow definitions and supporting scripts.
- </import-step>
-</import-steps>
